# mocking

./: LICENSE  README  README.md  pyproject.toml
definitions/: sales  sales.yaml
mocking/: mocking.py
mocking/builder/: builder.py  generators.py
